--- a/src/assets/i18n/sv.json
+++ b/src/assets/i18n/sv.json
@@ -8,12 +8,12 @@
   "apply.for.job.modal.button": "Ansök",
   "apply.for.job.modal.title": "Någonting mer du vill att vi ska veta?",
   "assignment.after_tax": "efter skatt",
-  "assignment.assignments.title": "Uppdrag",
+  "assignment.assignments.title": "Jobb",
   "assignment.comments.title": "Kommentarer på jobbet",
-  "assignment.details": "Uppdragsbeskrivning",
+  "assignment.details": "Jobbbeskrivning",
   "assignment.hours": "Timmar",
   "assignment.rate.gross_salary": "bruttolön",
-  "assignment.status.performed": "Uppdrag utfört",
+  "assignment.status.performed": "Jobb utfört",
   "assignment.status.user_company_hire": "Företaget vill anlita dig",
   "assignment.status.you_hired": "Du har blivit anställd",
   "basic.chat.messages.empty": "Inga meddelanden ännu",
@@ -27,7 +27,7 @@
   "common.close": "Stäng",
   "common.congratulation": "Grattis!",
   "common.error": "Hoppsan! Något gick fel.. Men oroa dig inte, vi jobbar på det!",
-  "common.find_assignment": "Hitta uppdrag",
+  "common.find_assignment": "Hitta jobb",
   "common.hour": "timmar",
   "common.login": "Logga in",
   "common.min": "minuter",
@@ -37,12 +37,12 @@
   "common.start_here": "Starta här!",
   "common.submit": "Skicka",
   "common.yes": "Ja",
-  "company.assignments.filter_1": "Uppdrag",
+  "company.assignments.filter_1": "Jobb",
   "company.assignments.filter_2": "Arkiv",
   "component.loading": "Laddar..",
-  "confirmation.applied.for.job.button": "Hitta fler uppdrag",
+  "confirmation.applied.for.job.button": "Hitta fler jobb",
   "confirmation.applied.for.job.description": "Vi på Just Arrived håller tummarna. Om uppdragsgivaren skickar ett erbjudande har du 18 timmar på dig att tacka ja till uppdraget. Du hittar uppdraget under Mina Uppdrag. Där samlas även all kommunikation som sker med uppdragsgivaren.",
-  "confirmation.applied.for.job.title": "Du har ansökt om uppdraget",
+  "confirmation.applied.for.job.title": "Du har ansökt om jobbet",
   "confirmation.contact.button": "Tillbaka till kontakt",
   "confirmation.contact.description": "Vi kommer svara så snart vi kan",
   "confirmation.contact.title": "Tack för ditt meddelande!",
@@ -67,6 +67,18 @@
   "error.title": "Ett fel uppstod!",
   "faq.answer.label": "Svar",
   "faq.title": "Frågor och svar",
+  "footer.about.us.section.careers": "Karriär",
+  "footer.about.us.section.faq": "FAQ",
+  "footer.about.us.section.just.arrived": "Om Just Arrived",
+  "footer.about.us.section.press": "Press",
+  "footer.about.us.section.title": "Om oss",
+  "footer.contact.us.section.title": "Kontakt",
+  "footer.follow.us.section.title": "Följ oss",
+  "footer.get.started.section.jobs": "Hitta jobb",
+  "footer.get.started.section.login": "Logga in",
+  "footer.get.started.section.profile": "Din profil",
+  "footer.get.started.section.register": "Skapa konto",
+  "footer.get.started.section.title": "Kom igång",
   "forbidden.error.description": "\nTyvärr, du har inte tillåtelse att utföra åtgärden.",
   "forbidden.error.title": "Otillåtet",
   "forgot.password.login.link": "Logga in istället",
@@ -80,7 +92,7 @@
   "god.mode.deactivate.button": "Deaktivera",
   "god.mode.pager.section.no.users": "Inga användare hittades",
   "god.mode.title": "{{numberOfUsers}} Användare",
-  "home.header.logged.in.jobs.button": "Hitta uppdrag",
+  "home.header.logged.in.jobs.button": "Hitta jobb",
   "home.header.logged.in.profile.button": "Redigera profil",
   "home.header.logged.in.title": "Välkommen {{username}}!",
   "home.header.logged.out.description": "Just Arrived hjälper dig att få de erfarenheter som du behöver för att komma in på den svenska arbetsmarknaden genom att matcha dig med svenska företag. Just nu förmedlar vi jobb i Stockholm, Göteborg och Malmö. Skapa ett konto och kom igång!",
@@ -99,15 +111,26 @@
   "home.instructions.second.section.instruction3": "Logga in ofta och se till att din profil är uppdaterad",
   "home.instructions.second.section.title": "Maximera dina chanser",
   "home.jobs.applied.for.title": "Sökta jobb",
-  "home.jobs.slider.new.jobs.title": "Nya uppdrag",
+  "home.jobs.slider.new.jobs.title": "Nya jobb",
   "home.jobs.slider.show.all.link": "Visa alla",
   "home.jobs.slider.user.jobs.job.applied.label": "Ansökt",
   "home.jobs.slider.user.jobs.job.ended.label": "Genomfört",
   "home.jobs.slider.user.jobs.job.offered.label": "Erbjuden",
-  "home.jobs.slider.user.jobs.title": "Mina uppdrag",
+  "home.jobs.slider.user.jobs.title": "Mina jobb",
   "home.jobs.slider.user.jobs.will.perform.job.label": "Anlitad",
   "home.partners.description": "Just Arrived är ett gemensamt pro bono-initiativ för att hjälpa nyanlända in på den svenska arbetsmarknaden. Vi ägs av en stiftelse och drivs av en sammanslutning av företag.",
   "home.partners.title": "Våra partners",
+  "how.it.works.section.create.accont.button": "Skapa konto",
+  "how.it.works.section.find.jobs.description.paragraph.1": "Nu är det dags att börja söka jobb!",
+  "how.it.works.section.find.jobs.description.paragraph.2": "Sök till varje, och alla jobb du vill ha. Glöm inte att logga in ofta för att se om vi har lagt upp några nya jobb!",
+  "how.it.works.section.find.jobs.description.title": "3. Sök jobb",
+  "how.it.works.section.jobs.button": "Kolla in våra jobb",
+  "how.it.works.section.register.description.paragraph.1": "Skapa ditt konto på Just Arrived",
+  "how.it.works.section.register.description.paragraph.2": "Registreringen tar en minut att fullfölja och är öppen för alla nyanlända och asylsökande. Du kommer också få nyheter och uppdateringar från Just Arrived efter din registrering.",
+  "how.it.works.section.register.description.title": "1. Skapa ett konto",
+  "how.it.works.section.update.profile.description.paragraph.1": "Detta är det allra viktigaste för att öka dina chanser att få ett jobb via Just Arrived!",
+  "how.it.works.section.update.profile.description.paragraph.2": "Se till att du fyller i all relevant information och alla dina olika kompetenser. Om din profil är tom så kommer du inte matchas med några jobb.",
+  "how.it.works.section.update.profile.description.title": "2. Uppdatera profil",
   "input.account.number.label": "Kontonummer",
   "input.account.number.placeholder": "Kontonummer",
   "input.apply.message.label": "Extra meddelande",
@@ -209,21 +232,21 @@
   "input.work.permit.front.label": "Arbetstillstånd (framsidan)",
   "input.zip.label": "Postnummer",
   "input.zip.placeholder": "Postnummer",
-  "job.actions.header.applied": "Du har sökt uppdraget",
-  "job.actions.header.apply": "Sök uppdraget",
+  "job.actions.header.applied": "Du har sökt jobbet",
+  "job.actions.header.apply": "Sök jobbet",
   "job.actions.header.confirm": "Tacka ja",
   "job.actions.header.hired": "Anlitad",
   "job.actions.header.login": "Logga in för att söka",
   "job.actions.header.offer": "Du har fått erbjudande om att utföra jobbet. Svara inom {{hours}} timmar och {{minutes}} minuter.",
-  "job.actions.header.performed": "Uppdrag utfört",
+  "job.actions.header.performed": "Jobb utfört",
   "job.actions.header.register": "Skapa ett konto",
-  "job.actions.section.applied": "Du har sökt uppdraget",
-  "job.actions.section.apply": "Sök uppdraget",
+  "job.actions.section.applied": "Du har sökt jobbet",
+  "job.actions.section.apply": "Sök jobbet",
   "job.actions.section.confirm": "Tacka ja",
   "job.actions.section.hired": "Anlitad",
   "job.actions.section.login": "Logga in för att söka",
   "job.actions.section.offer": "Du har fått erbjudande om att utföra jobbet. Svara inom {{hours}} timmar och {{minutes}} minuter.",
-  "job.actions.section.performed": "Uppdrag utfört",
+  "job.actions.section.performed": "Jobb utfört",
   "job.actions.section.register": "Skapa ett konto",
   "job.additional.user.info.modal.button": "Fortsätt",
   "job.additional.user.info.modal.title": "\nFör att maximera dina chanser att få jobbet bör du överväga att ge följande information",
@@ -238,7 +261,7 @@
   "job.scope.section.hours": "{{hours}} timmar",
   "job.scope.section.netSalary": "{{netSalary}} nettolön (efter skatt)",
   "job.scope.section.until.further.notice": "Tillsvidare",
-  "jobs.title": "Alla uppdrag ({{nbrOfJobs}})",
+  "jobs.title": "Alla jobb ({{nbrOfJobs}})",
   "language.proficiency.basic": "Grundläggande kunskaper",
   "language.proficiency.beginner": "Nybörjare",
   "language.proficiency.expert": "Flytande",
@@ -260,55 +283,55 @@
   "map.geolocation.error.unsupportedBrowser": "din webbläsare stödjer in positionering",
   "map.marker.info.button": "Gå till jobb",
   "menu.language.text_1": "Du kan gå tillbaka och ändra språk senare om du vill.",
-  "menu.language.text_2": "Uppdrag, kommentarer och meddelanden översätts automatiskt.",
+  "menu.language.text_2": "Jobb, kommentarer och meddelanden översätts automatiskt.",
   "menu.language.title": "Välj språk",
   "menu.language.translation_by_probono": "Översättningarna gjorda probono av",
   "menu.main.contact": "Kontakt",
   "menu.main.faq": "Frågor och Svar",
-  "menu.main.find_assignment": "Hitta uppdrag",
+  "menu.main.find_assignment": "Hitta jobb",
   "menu.main.god.mode": "Gudläge",
   "menu.main.home": "Hem",
   "menu.main.login": "Logga in",
   "menu.main.logout": "Logga ut",
-  "menu.main.my_assignment": "Mina uppdrag",
+  "menu.main.my_assignment": "Mina jobb",
   "menu.main.profile": "Profil",
   "menu.main.register": "Skapa konto",
   "menu.main.staffing_time_report": "Tidsrapportera",
   "menu.main.support.chat": "Chatta med Just Arrived",
-  "meta.404.title": "Hittades inte",
   "meta.404.description": "Sidan eller resursen du söker kunde inte hittas",
-  "meta.contact.title": "Kontakta oss",
+  "meta.404.title": "Hittades inte",
   "meta.contact.description": "Om du har några frågor eller feedback så får du gärna kontakta oss och så kommer vi höra av oss till dig så snart som möjligt.",
-  "meta.cookies.about.title": "Cookies",
+  "meta.contact.title": "Kontakta oss",
   "meta.cookies.about.description": "Vi använder cookies av tekniska skäl, för att underlätta användningen av våra tjänster och för att ge dig som användare relevant information när du besöker vår webbplats. Cookies används även för att mäta trafiken på vår webbplats, för insamling av statistik och för att förbättra våra tjänster. Genom att använda våra tjänster godkänner du att vi använder cookies, såvida du inte har inaktiverat dessa genom att ändra inställningarna för cookies i din webbläsare.",
-  "meta.error.title": "Fel",
+  "meta.cookies.about.title": "Cookies",
   "meta.error.description": "Hoppsan! Något gick fel.. Men oroa dig inte, vi jobbar på det!",
-  "meta.faq.title": "FAQ",
+  "meta.error.title": "Fel",
   "meta.faq.description": "Vi har samlat ett antal vanligt ställda frågor och information angående vår tjänst som vi vill dela med dig.",
-  "meta.forbidden.title": "Otillåtet",
+  "meta.faq.title": "FAQ",
   "meta.forbidden.description": "\nTyvärr, du har inte tillåtelse att utföra åtgärden.",
-  "meta.forgot.password.title": "Glömt lösenordet",
+  "meta.forbidden.title": "Otillåtet",
   "meta.forgot.password.description": "Om du har förlorat eller glömt ditt lösenord så är det enkelt att ändra det och få tillbaka kontrollen över ditt konto.",
-  "meta.god.mode.title": "Gudläge",
+  "meta.forgot.password.title": "Glömt lösenordet",
   "meta.god.mode.description": "Som admin så har du tillgång till hela systemet och kan agera på användarnas vägnar.",
-  "meta.home.title": "Vi ger nyanlända i Sverige en chans att komma in på arbetsmarknaden",
+  "meta.god.mode.title": "Gudläge",
   "meta.home.description": "Vi sammanför nyanlända invandrare med svenska företag. Vår digitala plattform gör det möjligt för företag att lägga upp jobb och matcha dem med nyanlända som söker arbete.",
-  "meta.job.title": "Sök nu",
+  "meta.home.title": "Vi ger nyanlända i Sverige en chans att komma in på arbetsmarknaden",
   "meta.job.description": "Genom att matcha dig med svenska företag så hjälper Just Arrived dig att få de referenser du behöver för att komma in på den svenska arbetsmarknaden.",
-  "meta.jobs.title": "Få erfarenheten du behöver för att komma in på den svenska arbetsmarknaden",
+  "meta.job.title": "Sök nu",
   "meta.jobs.description": "Nu är det dags att börja söka! Sök till vilket och hur många jobb du vill! Glöm inte att logga in ofta för att ta del av nyligen upplagda jobb!",
-  "meta.login.title": "Logga in",
+  "meta.jobs.title": "Få erfarenheten du behöver för att komma in på den svenska arbetsmarknaden",
   "meta.login.description": "Logga in nu och sök våra jobb!",
-  "meta.lost.connection.title": "Anslutning förlorad",
+  "meta.login.title": "Logga in",
   "meta.lost.connection.description": "Tyvärr, men det verkar som du har förlorat anslutningen till servern. Det kan vara så att din internetuppkoppling är nere eller att servern är offline.",
-  "meta.register.title": "Registrera",
+  "meta.lost.connection.title": "Anslutning förlorad",
   "meta.register.description": "Genom att matcha dig med svenska företag så hjälper Just Arrived dig att få de referenser du behöver för att komma in på den svenska arbetsmarknaden.",
-  "meta.reset.password.title": "Byt ditt lösenord",
+  "meta.register.title": "Registrera",
   "meta.reset.password.description": "Om du har förlorat eller glömt ditt lösenord så är det enkelt att ändra det och få tillbaka kontrollen över ditt konto.",
-  "meta.support.chat.title": "Chatta med oss",
+  "meta.reset.password.title": "Byt ditt lösenord",
   "meta.support.chat.description": "Om du har några frågor eller feedback så får du gärna chatta med oss så kommer vi höra av oss till dig så snart som möjligt.",
-  "meta.user.profile.title": "Din profil",
+  "meta.support.chat.title": "Chatta med oss",
   "meta.user.profile.description": "Din profil är det allra viktigaste för att öka dina chanser att få jobb genom Just Arrived! Var noga med att fylla i alla relevanta uppgifter och alla dina färdigheter. Om din profil är tom blir du inte matchad med några jobb.",
+  "meta.user.profile.title": "Din profil",
   "page.not.found.error.description": "Vi ber om ursäkt, sidan eller resursen du letar efter finns inte.",
   "page.not.found.error.title": "404 - Sidan kan inte hittas",
   "register.form.login.button": "Logga in nu",
@@ -321,6 +344,7 @@
   "reset.password.form.login.link": "Logga in",
   "reset.password.form.submit.button": "Byt lösenord",
   "reset.password.title": "Skriv in ditt nya lösenord",
+  "share.section.title": "Dela",
   "sign.for.job.form.submit.button": "Signera",
   "sign.for.job.form.terms.section": "Anställningsvillkor",
   "sign.for.job.modal.button": "Signera",
@@ -352,7 +376,7 @@
   "user.profile.form.status.section.header": "Status",
   "user.profile.form.submit.button": "Spara ändringar",
   "user.profile.form.work.experience.section.header": "Arbetslivserfarenhet",
-  "user.profile.header.information": "Tänk på att en väl ifylld profil ökar dina möjligheter att få uppdrag",
+  "user.profile.header.information": "Tänk på att en väl ifylld profil ökar dina möjligheter att få jobb",
   "user.profile.header.title": "Profil",
   "user.profile.tab.personal.details.title": "Personlig info",
   "user.profile.tab.profile.details.title": "Profil",
