--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -67,6 +67,18 @@
   "error.title": "حدث خطأ!",
   "faq.answer.label": "جواب",
   "faq.title": "أسئلة وأجوبة",
+  "footer.about.us.section.careers": "Careers",
+  "footer.about.us.section.faq": "FAQ",
+  "footer.about.us.section.just.arrived": "About Just Arrived",
+  "footer.about.us.section.press": "Press",
+  "footer.about.us.section.title": "About us",
+  "footer.contact.us.section.title": "اتصال",
+  "footer.follow.us.section.title": "Follow us",
+  "footer.get.started.section.jobs": "إيجاد وظيفة",
+  "footer.get.started.section.login": "تسجيل الدخول",
+  "footer.get.started.section.profile": "Your profile",
+  "footer.get.started.section.register": "إنشاء حساب",
+  "footer.get.started.section.title": "Get started",
   "forbidden.error.description": "عذرا، لا يسمح لك بتنفيذ هذا الإجراء.",
   "forbidden.error.title": "ممنوع",
   "forgot.password.login.link": "سجل الدخول بدلاً عن ذلك",
@@ -108,6 +120,17 @@
   "home.jobs.slider.user.jobs.will.perform.job.label": "تمّ تعيينه",
   "home.partners.description": "Just Arrived عبارة عن مبادرة مجانية مشتركة تم ابتكارها للمساعدة في إلحاق المهاجرين الذين وصلوا مؤخرًا بسوق العمل السويدي. وهذه المبادرة تمتلكها إحدى المؤسسات ويتولى إدارتها اتحاد شركات.",
   "home.partners.title": "شركاؤنا",
+  "how.it.works.section.create.accont.button": "إنشاء حساب",
+  "how.it.works.section.find.jobs.description.paragraph.1": "Now it is time to begin job searching!",
+  "how.it.works.section.find.jobs.description.paragraph.2": "Apply for any and as many jobs you want! Don’t forget to sign in often to see if we have posted any new jobs!",
+  "how.it.works.section.find.jobs.description.title": "3. Find jobs",
+  "how.it.works.section.jobs.button": "Check out our jobs",
+  "how.it.works.section.register.description.paragraph.1": "Create your account at Just Arrived.",
+  "how.it.works.section.register.description.paragraph.2": "The registration form takes one minute to complete and is open for all newcomers and asylum seekers. You will also receive news and updates from Just Arrived after registration.",
+  "how.it.works.section.register.description.title": "1. Create account",
+  "how.it.works.section.update.profile.description.paragraph.1": "This is the most important thing to increase your chances of getting any job through Just Arrived!",
+  "how.it.works.section.update.profile.description.paragraph.2": "Make sure to fill in every relevant piece of information and all your skills. If your profile is empty you won’t be matched with any jobs.",
+  "how.it.works.section.update.profile.description.title": "2. Update profile",
   "input.account.number.label": "رقم البطاقة",
   "input.account.number.placeholder": "رقم البطاقة",
   "input.apply.message.label": "رسائل اضافية",
@@ -275,40 +298,40 @@
   "menu.main.register": "إنشاء حساب",
   "menu.main.staffing_time_report": "تقرير الوقت",
   "menu.main.support.chat": "تحدث مع Just Arrived",
-  "meta.404.title": "Not found",
   "meta.404.description": "The page or resource you are looking for can not be found",
-  "meta.contact.title": "Contact us",
+  "meta.404.title": "Not found",
   "meta.contact.description": "If you have any questions or feedback feel free to contact you and we will be in touch as soon as we can.",
-  "meta.cookies.about.title": "كعكات",
+  "meta.contact.title": "Contact us",
   "meta.cookies.about.description": "نستخدم كعكات لأسباب تقنية ولتسهيل استعمال خدماتنا ولإعطاءك كمستخدم معلومات جديرة عند زيارتك لموقعنا تستخدم الكعكات أيضا لقياس عدد زيارات موقعنا ولجمع الإحصائيات وتحسين خدماتنا الاستعانة بخدماتنا يعني الموافقة منك ان نستعمل الكعكات، هذا إذا لم يتم تعطيلها عن طريق تغيير الإعدادات للكعكات في متصفح الشبكة لديك",
-  "meta.error.title": "Error",
+  "meta.cookies.about.title": "كعكات",
   "meta.error.description": "معذرة، حدث خطأ... لكن لا تقلق، نحن نقوم بإصلاحه!",
-  "meta.faq.title": "FAQ",
+  "meta.error.title": "Error",
   "meta.faq.description": "We have collected a number of commonly asked questions and information regarding our service that we want to share with you.",
-  "meta.forbidden.title": "ممنوع",
+  "meta.faq.title": "FAQ",
   "meta.forbidden.description": "عذرا، لا يسمح لك بتنفيذ هذا الإجراء.",
-  "meta.forgot.password.title": "نسيت كلمة المرور",
+  "meta.forbidden.title": "ممنوع",
   "meta.forgot.password.description": "If you have lost or forgot your password it is easy to change it and get access to your account back.",
-  "meta.god.mode.title": "وضع السوبر",
+  "meta.forgot.password.title": "نسيت كلمة المرور",
   "meta.god.mode.description": "As an admin you have access to the whole system and can act on users behalf.",
-  "meta.home.title": "We give newcomers in Sweden a chance to enter the labor market",
+  "meta.god.mode.title": "وضع السوبر",
   "meta.home.description": "We connect newly-arrived immigrants with Swedish companies. Our digital platform enables companies to post simple tasks and services and match them with newcomers looking for work.",
-  "meta.job.title": "Apply now",
+  "meta.home.title": "We give newcomers in Sweden a chance to enter the labor market",
   "meta.job.description": "By matching you with Swedish companies Just Arrived helps you get the credentials you need to enter the Swedish labor market.",
-  "meta.jobs.title": "أحصل على الخبرة التي تريد لكي تدخل سوق العمل السويدية ",
+  "meta.job.title": "Apply now",
   "meta.jobs.description": "Now is the time to begin job searching! Apply for any and as many jobs you want! Don’t forget to sign in often to see if we have posted any new jobs!",
-  "meta.login.title": "Login",
+  "meta.jobs.title": "أحصل على الخبرة التي تريد لكي تدخل سوق العمل السويدية ",
   "meta.login.description": "Login now and apply to our jobs!",
-  "meta.lost.connection.title": "فقد الإتصال",
+  "meta.login.title": "Login",
   "meta.lost.connection.description": "Sorry, but it seems that you lost the connection to the server. Maybe your internet connection is down or the server may be offline.",
-  "meta.register.title": "تسجيل جديد",
+  "meta.lost.connection.title": "فقد الإتصال",
   "meta.register.description": "By matching you with Swedish companies Just Arrived helps you get the credentials you need to enter the Swedish labor market.",
-  "meta.reset.password.title": "Change your password",
+  "meta.register.title": "تسجيل جديد",
   "meta.reset.password.description": "If you have lost or forgot your password it is easy to change it and get access to your account back.",
-  "meta.support.chat.title": "Chat with us",
+  "meta.reset.password.title": "Change your password",
   "meta.support.chat.description": "If you have any questions or feedback feel free to chat with us and we will be in touch as soon as we can.",
-  "meta.user.profile.title": "Your profile",
+  "meta.support.chat.title": "Chat with us",
   "meta.user.profile.description": "This is the most important thing to increase your chances of getting any job through Just Arrived! Make sure to fill in every relevant piece of information and all your skills. If your profile is empty you won’t be matched with any jobs.",
+  "meta.user.profile.title": "Your profile",
   "page.not.found.error.description": "عذرا، الصفحة أو المورد الذي تبحث عنه غير موجود.",
   "page.not.found.error.title": "404 - صفحة غير موجودة",
   "register.form.login.button": "قم بتسجيل الدخول الآن",
@@ -321,6 +344,7 @@
   "reset.password.form.login.link": "تسجيل الدخول",
   "reset.password.form.submit.button": "تغيير كلمة المرور",
   "reset.password.title": "حدد كلمة مرورك الجديدة ",
+  "share.section.title": "Share",
   "sign.for.job.form.submit.button": "تسجيل دخول",
   "sign.for.job.form.terms.section": "شروظ التوظيف",
   "sign.for.job.modal.button": "تسجيل دخول",
