--- a/src/assets/i18n/ti.json
+++ b/src/assets/i18n/ti.json
@@ -67,6 +67,18 @@
   "error.title": "An error occured!",
   "faq.answer.label": "Svar",
   "faq.title": "Frågor och Svar",
+  "footer.about.us.section.careers": "Careers",
+  "footer.about.us.section.faq": "FAQ",
+  "footer.about.us.section.just.arrived": "About Just Arrived",
+  "footer.about.us.section.press": "Press",
+  "footer.about.us.section.title": "About us",
+  "footer.contact.us.section.title": "Têkilî",
+  "footer.follow.us.section.title": "Follow us",
+  "footer.get.started.section.jobs": "Karekî bibîne",
+  "footer.get.started.section.login": "Têkeve",
+  "footer.get.started.section.profile": "Your profile",
+  "footer.get.started.section.register": "Hesabekê biafirîne",
+  "footer.get.started.section.title": "Get started",
   "forbidden.error.description": "Sorry, you’re not allowed to perform that action.",
   "forbidden.error.title": "Forbidden",
   "forgot.password.login.link": "Log in instead",
@@ -108,6 +120,17 @@
   "home.jobs.slider.user.jobs.will.perform.job.label": "Hat wezîfedar kirin",
   "home.partners.description": "Just Arrived is a joint pro-bono initiative designed to help newly arrived immigrants to the Swedish labour market. We are owned by a foundation and is run by an association of companies.",
   "home.partners.title": "Hevkarên me",
+  "how.it.works.section.create.accont.button": "Hesabekê biafirîne",
+  "how.it.works.section.find.jobs.description.paragraph.1": "Now it is time to begin job searching!",
+  "how.it.works.section.find.jobs.description.paragraph.2": "Apply for any and as many jobs you want! Don’t forget to sign in often to see if we have posted any new jobs!",
+  "how.it.works.section.find.jobs.description.title": "3. Find jobs",
+  "how.it.works.section.jobs.button": "Check out our jobs",
+  "how.it.works.section.register.description.paragraph.1": "Create your account at Just Arrived.",
+  "how.it.works.section.register.description.paragraph.2": "The registration form takes one minute to complete and is open for all newcomers and asylum seekers. You will also receive news and updates from Just Arrived after registration.",
+  "how.it.works.section.register.description.title": "1. Create account",
+  "how.it.works.section.update.profile.description.paragraph.1": "This is the most important thing to increase your chances of getting any job through Just Arrived!",
+  "how.it.works.section.update.profile.description.paragraph.2": "Make sure to fill in every relevant piece of information and all your skills. If your profile is empty you won’t be matched with any jobs.",
+  "how.it.works.section.update.profile.description.title": "2. Update profile",
   "input.account.number.label": "Nimreya kartê",
   "input.account.number.placeholder": "Nimreya kartê",
   "input.apply.message.label": "Additonal message",
@@ -275,40 +298,40 @@
   "menu.main.register": "Hesabekê biafirîne",
   "menu.main.staffing_time_report": "Time report",
   "menu.main.support.chat": "Chat with Just Arrived",
-  "meta.404.title": "Not found",
   "meta.404.description": "The page or resource you are looking for can not be found",
-  "meta.contact.title": "Contact us",
+  "meta.404.title": "Not found",
   "meta.contact.description": "If you have any questions or feedback feel free to contact you and we will be in touch as soon as we can.",
-  "meta.cookies.about.title": "Cookies",
+  "meta.contact.title": "Contact us",
   "meta.cookies.about.description": "Vi använder cookies av tekniska skäl, för att underlätta användningen av våra tjänster och för att ge dig som användare relevant information när du besöker vår webbplats. Cookies används även för att mäta trafiken på vår webbplats, för insamling av statistik och för att förbättra våra tjänster. Genom att använda våra tjänster godkänner du att vi använder cookies, såvida du inte har inaktiverat dessa genom att ändra inställningarna för cookies i din webbläsare.",
-  "meta.error.title": "Error",
+  "meta.cookies.about.title": "Cookies",
   "meta.error.description": "Oops, something went a bit wrong... But don't worry, we are on it!",
-  "meta.faq.title": "FAQ",
+  "meta.error.title": "Error",
   "meta.faq.description": "We have collected a number of commonly asked questions and information regarding our service that we want to share with you.",
-  "meta.forbidden.title": "Forbidden",
+  "meta.faq.title": "FAQ",
   "meta.forbidden.description": "Sorry, you’re not allowed to perform that action.",
-  "meta.forgot.password.title": "Forgot password",
+  "meta.forbidden.title": "Forbidden",
   "meta.forgot.password.description": "If you have lost or forgot your password it is easy to change it and get access to your account back.",
-  "meta.god.mode.title": "God mode",
+  "meta.forgot.password.title": "Forgot password",
   "meta.god.mode.description": "As an admin you have access to the whole system and can act on users behalf.",
-  "meta.home.title": "We give newcomers in Sweden a chance to enter the labor market",
+  "meta.god.mode.title": "God mode",
   "meta.home.description": "We connect newly-arrived immigrants with Swedish companies. Our digital platform enables companies to post simple tasks and services and match them with newcomers looking for work.",
-  "meta.job.title": "Apply now",
+  "meta.home.title": "We give newcomers in Sweden a chance to enter the labor market",
   "meta.job.description": "By matching you with Swedish companies Just Arrived helps you get the credentials you need to enter the Swedish labor market.",
-  "meta.jobs.title": "Get the experience you need to enter the Swedish labor market",
+  "meta.job.title": "Apply now",
   "meta.jobs.description": "Now is the time to begin job searching! Apply for any and as many jobs you want! Don’t forget to sign in often to see if we have posted any new jobs!",
-  "meta.login.title": "Login",
+  "meta.jobs.title": "Get the experience you need to enter the Swedish labor market",
   "meta.login.description": "Login now and apply to our jobs!",
-  "meta.lost.connection.title": "Lost connection",
+  "meta.login.title": "Login",
   "meta.lost.connection.description": "Sorry, but it seems that you lost the connection to the server. Maybe your internet connection is down or the server may be offline.",
-  "meta.register.title": "Register",
+  "meta.lost.connection.title": "Lost connection",
   "meta.register.description": "By matching you with Swedish companies Just Arrived helps you get the credentials you need to enter the Swedish labor market.",
-  "meta.reset.password.title": "Change your password",
+  "meta.register.title": "Register",
   "meta.reset.password.description": "If you have lost or forgot your password it is easy to change it and get access to your account back.",
-  "meta.support.chat.title": "Chat with us",
+  "meta.reset.password.title": "Change your password",
   "meta.support.chat.description": "If you have any questions or feedback feel free to chat with us and we will be in touch as soon as we can.",
-  "meta.user.profile.title": "Your profile",
+  "meta.support.chat.title": "Chat with us",
   "meta.user.profile.description": "This is the most important thing to increase your chances of getting any job through Just Arrived! Make sure to fill in every relevant piece of information and all your skills. If your profile is empty you won’t be matched with any jobs.",
+  "meta.user.profile.title": "Your profile",
   "page.not.found.error.description": "Sorry, the page or resource you are looking for does not exist.",
   "page.not.found.error.title": "404 - Page Not Found",
   "register.form.login.button": "Log in now",
@@ -321,6 +344,7 @@
   "reset.password.form.login.link": "Têkeve",
   "reset.password.form.submit.button": "Change password",
   "reset.password.title": "Set your new password",
+  "share.section.title": "Share",
   "sign.for.job.form.submit.button": "Sign",
   "sign.for.job.form.terms.section": "Terms of employment",
   "sign.for.job.modal.button": "Sign",
