Added a requirements section to the home page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -340,6 +340,17 @@
   "register.modal.title": "Register",
   "registered.modal.description": "Your account was successfully created",
   "registered.modal.title": "Welcome {{username}}!",
+  "requirements.section.asylum.seeker.requirement1": "Coordination number from the Swedish Tax Agency",
+  "requirements.section.asylum.seeker.requirement2": "AT-UND on item 7 on my LMA-card",
+  "requirements.section.asylum.seeker.requirement3": "Swedish bank account",
+  "requirements.section.asylum.seeker.title": "I am an asylum seeker",
+  "requirements.section.eu.citizen.requirement1": "Coordination number from the Swedish Tax Agency",
+  "requirements.section.eu.citizen.requirement2": "Swedish bank account",
+  "requirements.section.eu.citizen.title": "I am a EU citizen",
+  "requirements.section.read.more.button": "Read more in our FAQ",
+  "requirements.section.residence.permit.requirement1": "Swedish bank account",
+  "requirements.section.residence.permit.title": "I have a residence permit",
+  "requirements.section.title": "What do I need to work through Just Arrived?",
   "reset.password.form.forgot.password.link": "Forgot password",
   "reset.password.form.login.link": "Log in",
   "reset.password.form.submit.button": "Change password",
