--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -251,7 +251,12 @@
   "job.additional.user.info.modal.button": "Continue",
   "job.additional.user.info.modal.title": "To maximize your chances to get this job please consider providing the following information",
   "job.card.currency.per.hour": "{{currency}}/hour",
+  "job.card.full.time": "Full time",
   "job.card.hours": "{{hours}} hours",
+  "job.card.part.time": "Part time",
+  "job.card.read.more": "Read more",
+  "job.card.temporary": "Temporary",
+  "job.card.until.further.notice": "Indefinite duration",
   "job.comments.section.title": "Comments",
   "job.description.section.header": "Description",
   "job.information.section.header": "Information",
