--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -223,7 +223,7 @@
   "input.system.language.description": "هذه هي اللغة التي سوف نستخدمها للتواصل معك",
   "input.system.language.label": "اللغة الافتراضية",
   "input.system.language.placeholder": "اللغة الافتراضية",
-  "input.terms.label": "أقبل بشروط وعقود عمل Arrived Just .",
+  "input.terms.label": "I accept Just Arrived's terms and conditions.",
   "input.work.permit.back.description": "تحميل الصورة الخلفية لتصريح العمل",
   "input.work.permit.back.header": "رخصة عمل",
   "input.work.permit.back.label": "تصريح العمل (صورة خلفية)",
@@ -251,7 +251,12 @@
   "job.additional.user.info.modal.button": "أكمل",
   "job.additional.user.info.modal.title": "لزيادة فرصتك للحصول على هذه الوظيفة يرجى النظر في توفير المعلومات التالية",
   "job.card.currency.per.hour": "{{currency}} / الساعة\n",
+  "job.card.full.time": "Full time",
   "job.card.hours": "{{hours}} الساعات",
+  "job.card.part.time": "Part time",
+  "job.card.read.more": "Read more",
+  "job.card.temporary": "Temporary",
+  "job.card.until.further.notice": "Indefinite duration",
   "job.comments.section.title": "تعليق",
   "job.description.section.header": "وصف",
   "job.information.section.header": "معلومات",
@@ -340,6 +345,17 @@
   "register.modal.title": "تسجيل جديد",
   "registered.modal.description": "تم انشاء حسابك بنجاح",
   "registered.modal.title": "مرحبًا {{username}}!",
+  "requirements.section.asylum.seeker.requirement1": "Coordination number from the Swedish Tax Agency",
+  "requirements.section.asylum.seeker.requirement2": "AT-UND on item 7 on my LMA-card",
+  "requirements.section.asylum.seeker.requirement3": "Swedish bank account",
+  "requirements.section.asylum.seeker.title": "I am an asylum seeker",
+  "requirements.section.eu.citizen.requirement1": "Coordination number from the Swedish Tax Agency",
+  "requirements.section.eu.citizen.requirement2": "Swedish bank account",
+  "requirements.section.eu.citizen.title": "I am a EU citizen",
+  "requirements.section.read.more.button": "Read more in our FAQ",
+  "requirements.section.residence.permit.requirement1": "Swedish bank account",
+  "requirements.section.residence.permit.title": "I have a residence permit",
+  "requirements.section.title": "What do I need to work through Just Arrived?",
   "reset.password.form.forgot.password.link": "نسيت كلمة المرور",
   "reset.password.form.login.link": "تسجيل الدخول",
   "reset.password.form.submit.button": "تغيير كلمة المرور",
