--- a/src/assets/i18n/fa.json
+++ b/src/assets/i18n/fa.json
@@ -223,7 +223,7 @@
   "input.system.language.description": "This is the language we will use to communicate with you",
   "input.system.language.label": "Default language",
   "input.system.language.placeholder": "Default language",
-  "input.terms.label": "I accept Just Arrived's terms, conditions and employment contract",
+  "input.terms.label": "I accept Just Arrived's terms and conditions.",
   "input.work.permit.back.description": "Back photo of my work permit",
   "input.work.permit.back.header": "اجازه کار",
   "input.work.permit.back.label": "Work permit (back photo)",
@@ -251,7 +251,12 @@
   "job.additional.user.info.modal.button": "ادامه دهید",
   "job.additional.user.info.modal.title": "To maximize your chances to get this job please consider providing the following information",
   "job.card.currency.per.hour": "{{currency}}/hour",
+  "job.card.full.time": "Full time",
   "job.card.hours": "{{hours}} hours",
+  "job.card.part.time": "Part time",
+  "job.card.read.more": "Read more",
+  "job.card.temporary": "Temporary",
+  "job.card.until.further.notice": "Indefinite duration",
   "job.comments.section.title": "نظرات",
   "job.description.section.header": "شرح",
   "job.information.section.header": "Information",
@@ -340,6 +345,17 @@
   "register.modal.title": "Register",
   "registered.modal.description": "Your account was successfully created",
   "registered.modal.title": "Welcome {{username}}!",
+  "requirements.section.asylum.seeker.requirement1": "Coordination number from the Swedish Tax Agency",
+  "requirements.section.asylum.seeker.requirement2": "AT-UND on item 7 on my LMA-card",
+  "requirements.section.asylum.seeker.requirement3": "Swedish bank account",
+  "requirements.section.asylum.seeker.title": "I am an asylum seeker",
+  "requirements.section.eu.citizen.requirement1": "Coordination number from the Swedish Tax Agency",
+  "requirements.section.eu.citizen.requirement2": "Swedish bank account",
+  "requirements.section.eu.citizen.title": "I am a EU citizen",
+  "requirements.section.read.more.button": "Read more in our FAQ",
+  "requirements.section.residence.permit.requirement1": "Swedish bank account",
+  "requirements.section.residence.permit.title": "I have a residence permit",
+  "requirements.section.title": "What do I need to work through Just Arrived?",
   "reset.password.form.forgot.password.link": "Forgot password",
   "reset.password.form.login.link": "وارد سیستم شدن",
   "reset.password.form.submit.button": "Change password",
