--- a/src/assets/i18n/sv.json
+++ b/src/assets/i18n/sv.json
@@ -223,7 +223,7 @@
   "input.system.language.description": "Språket vi ska kommunicera med dig på",
   "input.system.language.label": "Standardspråk",
   "input.system.language.placeholder": "Standardspråk",
-  "input.terms.label": "Jag accepterar Just Arriveds användarvillkor och anställningskontrakt.",
+  "input.terms.label": "Jag accepterar Just Arriveds användarvillkor.",
   "input.work.permit.back.description": "Foto på baksidan av ditt uppehållstillstånd",
   "input.work.permit.back.header": "Arbetstillstånd",
   "input.work.permit.back.label": "Arbetstillstånd (baksidan)",
@@ -251,7 +251,12 @@
   "job.additional.user.info.modal.button": "Fortsätt",
   "job.additional.user.info.modal.title": "\nFör att maximera dina chanser att få jobbet bör du överväga att ge följande information",
   "job.card.currency.per.hour": "{{currency}}/timmen",
+  "job.card.full.time": "Heltid",
   "job.card.hours": "{{hours}} timmar",
+  "job.card.part.time": "Deltid",
+  "job.card.read.more": "Läs mer",
+  "job.card.temporary": "Tillfälligt",
+  "job.card.until.further.notice": "Tillsvidare",
   "job.comments.section.title": "Kommentarer",
   "job.description.section.header": "Beskrivning",
   "job.information.section.header": "Information",
@@ -340,6 +345,17 @@
   "register.modal.title": "Registrera",
   "registered.modal.description": "Ditt konto har skapats utan problem",
   "registered.modal.title": "Välkommen {{username}}!",
+  "requirements.section.asylum.seeker.requirement1": "Samordningsnummer från Skatteverket",
+  "requirements.section.asylum.seeker.requirement2": "AT-UND under punkt 7 på mitt LMA-kort",
+  "requirements.section.asylum.seeker.requirement3": "Svenskt bankkonto",
+  "requirements.section.asylum.seeker.title": "Jag är asylsökande",
+  "requirements.section.eu.citizen.requirement1": "Samordningsnummer från Skatteverket",
+  "requirements.section.eu.citizen.requirement2": "Svenskt bankkonto",
+  "requirements.section.eu.citizen.title": "Jag är EU medborgare",
+  "requirements.section.read.more.button": "Läs mer i vår FAQ",
+  "requirements.section.residence.permit.requirement1": "Svenskt bankkonto",
+  "requirements.section.residence.permit.title": "Jag har ett uppehållstillstånd",
+  "requirements.section.title": "Vad behöver jag för att jobba genom Just Arrived?",
   "reset.password.form.forgot.password.link": "Glömt lösenordet",
   "reset.password.form.login.link": "Logga in",
   "reset.password.form.submit.button": "Byt lösenord",
