Refactored my jobs into applications page.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -41,7 +41,7 @@
   "company.assignments.filter_2": "History",
   "component.loading": "Loading..",
   "confirmation.applied.for.job.button": "Search for more jobs",
-  "confirmation.applied.for.job.description": "We're crossing our fingers for you right now. If the employer makes an offer, you have 18 hours to accept the offer. You'll find the job under My Jobs. This is where you'll also find all communication that happens between you and the employer.",
+  "confirmation.applied.for.job.description": "We're crossing our fingers for you right now. If the employer makes an offer, you have 18 hours to accept the offer. You'll find the job under My Applications. This is where you'll also find all communication that happens between you and the employer.",
   "confirmation.applied.for.job.title": "You have applied for the job",
   "confirmation.contact.button": "Back to contact",
   "confirmation.contact.description": "We will reply as soon as we can.",
@@ -116,7 +116,7 @@
   "home.jobs.slider.user.jobs.job.applied.label": "Applied",
   "home.jobs.slider.user.jobs.job.ended.label": "Finished",
   "home.jobs.slider.user.jobs.job.offered.label": "Offered",
-  "home.jobs.slider.user.jobs.title": "My jobs",
+  "home.jobs.slider.user.jobs.title": "My Applications",
   "home.jobs.slider.user.jobs.will.perform.job.label": "Hired",
   "home.partners.description": "Just Arrived is a joint pro-bono initiative designed to help newly arrived immigrants to the Swedish labour market. We are owned by a foundation and is run by an association of companies.",
   "home.partners.title": "Our partners",
@@ -298,13 +298,15 @@
   "menu.main.home": "Home",
   "menu.main.login": "Log in",
   "menu.main.logout": "Log out",
-  "menu.main.my_assignment": "My jobs",
+  "menu.main.my_assignment": "My Applications",
   "menu.main.profile": "Profile",
   "menu.main.register": "Create account",
   "menu.main.staffing_time_report": "Time report",
   "menu.main.support.chat": "Chat with Just Arrived",
   "meta.404.description": "The page or resource you are looking for can not be found",
   "meta.404.title": "Not found",
+  "meta.applications.description": "Here you can see your job applications and their current status",
+  "meta.applications.title": "Your applications",
   "meta.contact.description": "If you have any questions or feedback feel free to contact you and we will be in touch as soon as we can.",
   "meta.contact.title": "Contact us",
   "meta.cookies.about.description": "We use cookies for technical reasons to simplify the use of our services and to give you the user more relevant information when your visit our website. Cookies are also used to measure traffic to our website, for the collection of data and to improve our services. By using our services, you accept that we use cookies, as long as you have not disabled them in your cookies settings in your web browser.",
