Job page version 2

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,4 +1,16 @@
 {
+  "job.actions.section.read.more": "Read more about",
+  "job.recruiter.section.title": "Responsible recruiter",
+  "job.important.information.section.hours": "{{hours}} hours",
+  "job.important.information.section.salary.per.hour": "{{grossSalaryPerHour}} gross salary",
+  "job.important.information.section.total.salary": "{{totalGrossSalary}} total salary ({{totalNetSalary}} after tax)",
+  "job.skills.section.title": "You have",
+  "job.interests.section.title": "You are",
+  "job.tasks.section.title": "Tasks",
+  "job.important.information.section.title": "Important information",
+  "job.description.section.title": "About the job",
+  "job.short.description.section.title": "Short about the job",
+  "job.company.short.description.section.title": "Short about {{company}}",
   "already.registered.modal.button": "Log in",
   "already.registered.modal.info": "It seems that there already is an account using {{emailOrPhone}}, so we suggest that you log in instead. If you forgot your password you can reset your password by clicking \"Forgotten your password?\" above",
   "already.registered.modal.title": "{{emailOrPhone}} is already registered",
@@ -362,7 +374,7 @@
   "reset.password.form.login.link": "Log in",
   "reset.password.form.submit.button": "Change password",
   "reset.password.title": "Set your new password",
-  "share.section.title": "Share",
+  "share.section.title": "Share on social media",
   "sign.for.job.form.submit.button": "Sign",
   "sign.for.job.form.terms.section": "Terms of employment",
   "sign.for.job.modal.button": "Sign",
