Share icon hover image switch

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -375,6 +375,7 @@
   "reset.password.form.submit.button": "Change password",
   "reset.password.title": "Set your new password",
   "share.section.title": "Share on social media",
+  "share.with.modal.section.title": "Share",
   "sign.for.job.form.submit.button": "Sign",
   "sign.for.job.form.terms.section": "Terms of employment",
   "sign.for.job.modal.button": "Sign",
