Added a login or register modal so we only need an apply button on job page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -241,7 +241,7 @@
   "job.actions.header.performed": "Job performed",
   "job.actions.header.register": "Create an account",
   "job.actions.section.applied": "You have applied for this job",
-  "job.actions.section.apply": "Apply for job",
+  "job.actions.section.apply": "Apply",
   "job.actions.section.confirm": "Accept offer",
   "job.actions.section.hired": "Hired",
   "job.actions.section.login": "Log in to apply",
@@ -289,6 +289,9 @@
   "login.form.submit.button": "Log in",
   "login.modal.button": "Log in",
   "login.modal.title": "Log in",
+  "login.or.register.modal.login": "Log in",
+  "login.or.register.modal.register": "Create account",
+  "login.or.register.modal.title": "Before you can do that please login or create a new account",
   "login.title": "Log in",
   "lost.connection.description": "Sorry, but it seems that you lost the connection to the server. Maybe your internet connection is down or the server may be offline",
   "lost.connection.title": "Lost connection",
