Connected job sections to data points

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -276,8 +276,8 @@
   "job.scope.section.until.further.notice": "Until further notice",
   "job.short.description.section.title": "Short about the job",
   "job.tasks.section.title": "Tasks",
-  "job.you.are.section.title": "You are",
-  "job.you.have.section.title": "You have",
+  "job.applicant.section.title": "You are",
+  "job.requirements.section.title": "You have",
   "jobs.title": "All jobs ({{nbrOfJobs}})",
   "language.proficiency.basic": "Basic knowledge",
   "language.proficiency.beginner": "Beginner",
